@@ -1424,7 +1424,7 @@ class CHost extends CHostGeneral {
 	 * @return void
 	 */
 	protected function validateDelete(array $hostIds, $nopermissions = false) {
-		if (empty($hostIds)) {
+		if (!$hostIds) {
 			self::exception(ZBX_API_ERROR_PARAMETERS, _('Empty input parameter.'));
 		}
 
@@ -1434,27 +1434,14 @@ class CHost extends CHostGeneral {
 	}
 
 	/**
-	 * Delete Host
+	 * Delete Host.
 	 *
-	 * @param string|array 	$hostIds
-	 * @param bool			$nopermissions
+	 * @param array	$hostIds
+	 * @param bool	$nopermissions
 	 *
-	 * @return array|boolean
+	 * @return array
 	 */
-	public function delete($hostIds, $nopermissions = false) {
-		$hostIds = zbx_toArray($hostIds);
-
-		// deprecated input support
-		if ($hostIds && is_array($hostIds[0])) {
-			$this->deprecated('Passing objects is deprecated, use an array of IDs instead.');
-			foreach ($hostIds as $host) {
-				if (!check_db_fields(array('hostid' => null), $host)) {
-					self::exception(ZBX_API_ERROR_PARAMETERS, _('No host ID given.'));
-				}
-			}
-			$hostIds = zbx_objectValues($hostIds, 'hostid');
-		}
-
+	public function delete(array $hostIds, $nopermissions = false) {
 		$this->validateDelete($hostIds, $nopermissions);
 
 		// delete the discovery rules first
