@@ -76,15 +76,11 @@ class CProxy extends CZBXAPI {
 			'preservekeys'				=> null,
 			'selectHosts'				=> null,
 			'selectInterface'			=> null,
-			'selectInterfaces'			=> null, // deprecated
 			'sortfield'					=> '',
 			'sortorder'					=> '',
 			'limit'						=> null
 		);
 		$options = zbx_array_merge($defOptions, $options);
-
-		// deprecated
-		$this->checkDeprecatedParam($options, 'selectInterfaces');
 
 		// editable + PERMISSION CHECK
 		if ($userType != USER_TYPE_SUPER_ADMIN && !$options['nopermissions']) {
@@ -404,26 +400,11 @@ class CProxy extends CZBXAPI {
 	/**
 	 * Delete proxy.
 	 *
-	 * @param string|array $proxyIds
+	 * @param array	$proxyIds
 	 *
 	 * @return array
 	 */
-	public function delete($proxyIds) {
-		$proxyIds = zbx_toArray($proxyIds);
-
-		// deprecated input support
-		if ($proxyIds && is_array($proxyIds[0])) {
-			$this->deprecated('Passing objects is deprecated, use an array of IDs instead.');
-
-			foreach ($proxyIds as $proxyId) {
-				if (!check_db_fields(array('proxyid' => null), $proxyId)) {
-					self::exception(ZBX_API_ERROR_PARAMETERS, _('No proxy ID given.'));
-				}
-			}
-
-			$proxyIds = zbx_objectValues($proxyIds, 'proxyid');
-		}
-
+	public function delete(array $proxyIds) {
 		$this->validateDelete($proxyIds);
 
 		$dbProxies = DBselect(
@@ -638,27 +619,6 @@ class CProxy extends CZBXAPI {
 			foreach ($result as $key => $proxy) {
 				if (!empty($proxy['interface'])) {
 					$result[$key]['interface'] = $proxy['interface'];
-				}
-			}
-		}
-
-		// adding host interfaces (deprecated)
-		if ($options['selectInterfaces'] !== null && $options['selectInterfaces'] != API_OUTPUT_COUNT) {
-			$interfaces = API::HostInterface()->get(array(
-				'output' => $this->outputExtend('interface', array('interfaceid', 'hostid'), $options['selectInterfaces']),
-				'nodeids' => $options['nodeids'],
-				'hostids' => $proxyIds,
-				'nopermissions' => true,
-				'preservekeys' => true
-			));
-
-			$relationMap = $this->createRelationMap($interfaces, 'hostid', 'interfaceid');
-			$interfaces = $this->unsetExtraFields($interfaces, array('hostid', 'interfaceid'), $options['selectInterfaces']);
-			$result = $relationMap->mapOne($result, $interfaces, 'interfaces');
-
-			foreach ($result as $key => $proxy) {
-				if (!empty($proxy['interfaces'])) {
-					$result[$key]['interfaces'] = array($proxy['interfaces']);
 				}
 			}
 		}
